# HXNID-Bot-WhatsApp

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  go-multidevice.Dockerfile  main.py  requirements.txt
go-wa-api/: .gitignore
go-wa-api/src/: go.mod  go.sum  main.go
go-wa-api/src/cmd/: mcp.go  rest.go  root.go
go-wa-api/src/config/: settings.go
go-wa-api/src/domains/app/: app.go
go-wa-api/src/infrastructure/whatsapp/: init.go  utils.go  webhook.go
go-wa-api/src/ui/mcp/: send.go
go-wa-api/src/ui/rest/: app.go  group.go  message.go  newsletter.go  send.go  user.go
go-wa-api/src/ui/rest/helpers/: common.go  flushChatCsv.go
go-wa-api/src/ui/rest/middleware/: recovery.go
go-wa-api/src/ui/websocket/: websocket.go
go-wa-api/src/usecase/: app.go  group.go  message.go  newsletter.go  send.go  user.go
go-wa-api/src/validations/: app_validation.go  group_validation.go  message_validation.go  newsletter_validation.go  send_validation.go  send_validation_test.go  user_validation.go  user_validation_test.go
python-wa-bot/: .env.example  .gitignore  bot_logic.py  pyproject.toml  requirements.txt
python-wa-bot/docker/: python.Dockerfile
